--- a/Front-end_Tiennh21/Assignment/layout/About.html
+++ b/Front-end_Tiennh21/Assignment/layout/About.html
@@ -6,7 +6,7 @@
                 Hiện nay, phương án thi trắc nghiệm đã được triển khai rộng rãi trong giáo dục theo chỉ đạo của Bộ giáo dục và đào tạo. Được bộ giáo dục xem đây là phương pháp thi hiện đại, đánh giá được tổng quát toàn bộ kiến thức của người học. Song, việc ứng
                 dụng CNTT trong việc ra đề thi của giáo viên và làm bài của học sinh chưa thực sự được chú trọng.
             </p>
-            <a class="blue-text fw-bold fs-5 text-uppercase"  href="#">Learn more 
+            <a class="blue-text fw-bold fs-5 text-uppercase"  href="#!ListTest">Learn more 
           <i class="fa fa-chevron-right pl-1"></i>
         </a>
         </div>
