--- a/Front-end_Tiennh21/Assignment/css/Register.css
+++ b/Front-end_Tiennh21/Assignment/css/Register.css
@@ -18,3 +18,12 @@
       bottom: 50px;
     }
   }
+
+
+  @media only screen and (max-width: 991px) {
+    /* .navbar-header{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    } */
+  } 
