--- a/Front-end_Tiennh21/Assignment/layout/Navbar.html
+++ b/Front-end_Tiennh21/Assignment/layout/Navbar.html
@@ -27,79 +27,94 @@
 <header ng-controller="myCtrl">
     <div class="row mt-2 align-items-center">
         <div class="col-xxl-3 col-3">
-            <img class="img-responsive img-fluid ms-4" width="200" src="images/logos/LogoNew.png" alt="">
+            <a href="#!index">
+                <img class="img-responsive img-fluid ms-4 img-Icon" width="200" src="images/logos/LogoNew.png" alt="">
+            </a>
         </div>
-        <div class="col-xxl-6 col-6">
-            <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="col-xxl-6 col-6 col-lg-6 ">
+            <nav class="navbar navbar-expand-lg navbar-dark ">
                 <div class="container-fluid">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                        <ul class="navbar-nav">
-                            <li class="nav-item ">
-                                <a class="nav-link text-white" aria-current="page" href="#">Learning</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="#">About Page</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Contact Page</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Comment Page</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="#">FAQ Page</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Exam Page</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdownMenuLink"
-                                    role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    List Exam
-                                </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <li ng-repeat="sub in subjects">
-                                        <a class="dropdown-item" href="#">
-                                            <img src="{{'images/logos/'+sub.Logo}}"
-                                                class="img-fluid rounded-circle hoverable" style="height: 20px;" alt="">
-                                            {{sub.Name}}
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
+                    <div class="mx-auto d-block">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
                     </div>
-                    <a href="">
-                        <img width="32" class="img-responsive img-fluid " src="images/logos/united-kingdom (1).png"
-                            alt="">
-                    </a>
+                    <div class="mx-auto d-block">
+                        <div class="collapse navbar-collapse " id="navbarNavDropdown">
+                            <ul class="navbar-nav text-center">
+                                <li class="nav-item ">
+                                    <a class="nav-link text-white" aria-current="page" href="#">Learning</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" href="#!about">About Page</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" href="#!Contact">Contact Page</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" href="#!Feedback_Home">Feedback Page</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" href="#!FAQ">FAQ Page</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" href="#!ListTest">Exam Page</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdownMenuLink"
+                                        role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        List Exam
+                                    </a>
+                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                        <li ng-repeat="sub in subjects">
+                                            <a class="dropdown-item" href="#">
+                                                <img src="{{'images/logos/'+sub.Logo}}"
+                                                    class="img-fluid rounded-circle hoverable" style="height: 20px;"
+                                                    alt="">
+                                                {{sub.Name}}
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </nav>
         </div>
 
-        <div class="col-xxl-3 col-4">
-            <div class="offset-6">
-                <!-- Button trigger modal -->
-                <button type="button" class="btn text-light fw-bold" data-bs-toggle="modal"
-                    data-bs-target="#exampleModal">
-                    Login
-                </button>
+        <div class="col-lg-3 col-md-3 col-xxl-3">
 
-                <!-- Modal -->
-                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                    aria-hidden="true">
+            <div class="row">
+                <!-- Example single danger button -->
+                <div class="btn-group">
+                    <button type="button" class="btn text-white dropdown-toggle" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        <i class="fa fa-user" aria-hidden="true"></i>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#!Profile">Profile</a></li>
+                        <li><a class="dropdown-item" href="#!ChangePassword">Change Password</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="#">Log out</a></li>
+                    </ul>
+                </div>
+
+                <butLton class="btn text-light fw-bold ms-0" type="button" data-bs-target="#myModal"
+                    data-bs-toggle="modal">
+                    Login
+                </butLton>
+
+                <div class="modal " id="myModal">
                     <div class="modal-dialog">
                         <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title text-center" id="exampleModalLabel">with your social
-                                    networks</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                    aria-label="Close"></button>
+                            <div class="modal-header alert alert-info">
+                                <h2 class="modal-title text-center">Login now</h2>
+                                <button class="btn-close" type="button" data-bs-dismiss="modal"></button>
                             </div>
                             <div class="modal-body">
                                 <div class="container">
@@ -127,14 +142,22 @@
                                             <button class="btn btn-primary justify-content-center col-12">
                                                 Login
                                             </button>
+
+
                                         </div>
                                         <div class="col-md-12 registered-forgot" role="tablist">
                                             <div class="row mt-3">
                                                 <div class="col-md-5 text-left">
                                                 </div>
                                                 <div class="col-md-7 text-right">
-                                                    <a href="#" style="text-decoration: none">I
+                                                    <a href="#" style="text-decoration: none" data-bs-dismiss="modal"
+                                                        data-bs-target="#myModal_2" data-bs-toggle="modal">I
                                                         can't rememeber my password</a>
+                                                    <!-- <a type="button" class="btn" data-bs-toggle="modal"
+                                                        data-bs-target="#myForgotPassword">
+                                                        Launch demo modal
+                                                    </a> -->
+
                                                 </div>
                                             </div>
                                         </div>
@@ -151,7 +174,65 @@
                         </div>
                     </div>
                 </div>
-                <a href="#register" class="col-xxl-5 col-5 btn btn-sm btn-danger">Register</a>
+
+                <div class="modal" id="myModal_2">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header alert alert-warning">
+                                <h2 class="modal-title text-center">Forgot Password</h2>
+                                <button class="btn-close" type="button" data-bs-dismiss="modal"></button>
+                            </div>
+                            <div class="modal-body">
+                                <div class="container">
+                                    <div class="text-center">
+                                        <img src="images/imagePic/update.gif" width="64px"
+                                            class="img-circle img-responsive img-fluid " alt="">
+                                    </div>
+                                    <!-- <p class="text-center">Tài khoản: {{student.fullname}}</p> -->
+                                    <div class="ps-5 pe-5 pb-5 ">
+                                        <div class="row">
+                                            <form name="">
+                                                <div class="mt-3 ">
+                                                    <div class="input-group">
+                                                        <span class="input-group-text" id="basic-addon1">
+                                                            <i class="fa fa-user" aria-hidden="true"></i>
+                                                        </span>
+                                                        <input type="text" class="form-control" placeholder="Username"
+                                                            aria-label="Username" aria-describedby="basic-addon1">
+                                                    </div>
+                                                </div>
+                                                <div class="mt-3 ">
+                                                    <div class="input-group">
+                                                        <span class="input-group-text" id="basic-addon1">
+                                                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                                                        </span>
+                                                        <input type="email" class="form-control" placeholder="Email"
+                                                            aria-label="Username" aria-describedby="basic-addon1">
+                                                    </div>
+                                                </div>
+
+                                                <div class="text-center mt-4">
+                                                    <button class="btn btn-primary shadow-lg col-12 mb-2">Send</button>
+                                                    <button class="btn btn-danger shadow-lg col-12"
+                                                        data-bs-dismiss="modal" data-bs-target="#myModal"
+                                                        data-bs-toggle="modal">Back</button>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="modal-footer text-center">
+                                <div class="col-md-12 terms-of-use">
+                                    This site is protected by reCAPTCHA and <a href="/terms" target="_blank">Terms of
+                                        Use</a> apply.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button href="#register"
+                    class="col-xxl-5 btn btn-sm btn-danger btn-Register mx-auto d-block">Register</button>
             </div>
         </div>
     </div>
