--- a/Front-end_Tiennh21/Assignment/layout/Navbar.html
+++ b/Front-end_Tiennh21/Assignment/layout/Navbar.html
@@ -113,11 +113,23 @@
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header alert alert-info">
-                                <h2 class="modal-title text-center">Login now</h2>
+                                <h3 class="modal-title text-center">Login now</h3>
                                 <button class="btn-close" type="button" data-bs-dismiss="modal"></button>
                             </div>
                             <div class="modal-body">
                                 <div class="container">
+                                    <div class="row justify-content-center">
+                                        <button class="btn btn-info col-3">
+                                            <img src="https://img.icons8.com/color/48/000000/facebook-new.png" />
+                                            facebook</button>
+                                        <button class="btn btn-primary col-3 ms-2 me-2">
+                                            <img src="https://img.icons8.com/color/48/000000/microsoft.png" />
+                                            microsoft</button>
+                                        <button class="btn btn-danger col-3">
+                                            <img src="https://img.icons8.com/color/48/000000/google-logo.png" />
+                                            google</button>
+                                    </div>
+                                    <h6 class="text-center mt-3 fw-normal">OR</h6>
                                     <div class="mt-3 ">
                                         <div class="input-group">
                                             <span class="input-group-text" id="basic-addon1">
@@ -179,7 +191,7 @@
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header alert alert-warning">
-                                <h2 class="modal-title text-center">Forgot Password</h2>
+                                <h3 class="modal-title text-center">Forgot Password</h3>
                                 <button class="btn-close" type="button" data-bs-dismiss="modal"></button>
                             </div>
                             <div class="modal-body">
