--- a/Front-end_Tiennh21/Assignment/layout/ListTest.html
+++ b/Front-end_Tiennh21/Assignment/layout/ListTest.html
@@ -19,7 +19,7 @@
                 </a>
                 <h4 class="font-weight-bold mb-3">{{sub.Name}}</h4>
                 <p class="text-muted">Bài thi gồm kiến thức đã học trong môn {{sub.Name}}</p>
-                <a href="#" class="btn btn-success btn-rounded btn-md"> Chi tiết</a>
+                <a href="#!informationExam" class="btn btn-success btn-rounded btn-md"> Chi tiết</a>
             </div>
         </div>
     </div>
