--- a/Front-end_Tiennh21/Assignment/layout/ListQuestion.html
+++ b/Front-end_Tiennh21/Assignment/layout/ListQuestion.html
@@ -22,10 +22,10 @@
                     </div>
                     <hr class="mt-3 mb-3">
                     <div class="row">
-                        <div class="col-4">
-                            <img src="images/logos/ADAV.jpg" alt="">
+                        <div class="col-12 col-xxl-4 text-center">
+                            <img class="img-responsive img-fluid" src="images/logos/ADAV.jpg" alt="">
                         </div>
-                        <div class="col-8">
+                        <div class="col-xxl-8">
                             <h4>Câu hỏi</h4>
                         </div>
                     </div>
@@ -40,21 +40,23 @@
         </div>
 
         <div class="row">
-            <nav aria-label="...">
-                <ul class="pagination justify-content-center">
-                    <li class="page-item disabled">
-                        <a class="page-link">Previous</a>
-                    </li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item active" aria-current="page">
-                        <a class="page-link" href="#">2</a>
-                    </li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item">
-                        <a class="page-link" href="#">Next</a>
-                    </li>
-                </ul>
-            </nav>
+            <div class="col-12">
+                <nav aria-label="...">
+                    <ul class="pagination justify-content-center">
+                        <li class="page-item disabled">
+                            <a class="page-link">Previous</a>
+                        </li>
+                        <li class="page-item"><a class="page-link" href="#">1</a></li>
+                        <li class="page-item active" aria-current="page">
+                            <a class="page-link" href="#">2</a>
+                        </li>
+                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item">
+                            <a class="page-link" href="#">Next</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </div>
 
         <div class="row">
